--- a/Chelsie's Website/templates/learnMoreAboutMe.html
+++ b/Chelsie's Website/templates/learnMoreAboutMe.html
@@ -2,7 +2,8 @@
 {% block title %} More About Me - CN {% endblock %}
 {% block content %}
     <div class="container py-5 container-lg mx-auto d-block">
-        <h1 class="font-weight-lighter text-reset text-center"><a href="/static/Resume_ChelsieNgManKing.pdf" target="_blank"><span class="badge badge-light"><i
+        <h1 class="font-weight-lighter text-reset text-center"><a href="/static/Resume_ChelsieNgManKing.pdf"
+                                                                  target="_blank"><span class="badge badge-light"><i
                 class="fas fa-download"></i>
             Download Resume</span></a></h1><br>
         <ul class="nav nav-tabs nav-justified">
@@ -18,8 +19,9 @@
                 <div class="media border p-3">
                     <img src="/static/images/concordia.jpg" height="48" width="48" class="rounded mr-3">
                     <div class="media-body">
-                        <h4 class="lead">Concordia University</h4>
-                        <div class="container rounded bg-light">
+                        <h4 class="lead" style="float: left">Concordia University</h4>
+                        <h5 style="float: right" class="lead">2018 - 2022 (Expected)</h5>
+                        <div class="container rounded bg-light" style="clear:both">
                             <p>Bachelor of Computer Science - General Program Co-op</p>
                             <ul>
                                 <li>Member of the Institute for Co-operative Education</li>
@@ -31,8 +33,9 @@
                 <div class="media border p-3">
                     <img src="/static/images/LCC.png" height="48" width="48" class="rounded mr-3">
                     <div class="media-body">
-                        <h4 class="lead">Lower Canada College</h4>
-                        <div class="container rounded bg-light">
+                        <h4 class="lead" style="float: left;">Lower Canada College</h4>
+                        <h5 style="float: right" class="lead">2017 - 2018</h5>
+                        <div class="container rounded bg-light" style="clear: both">
                             <p>Pre-University Diploma</p>
                             <ul>
                                 <li>Graduated with Honours</li>
@@ -43,8 +46,9 @@
                 <div class="media border p-3">
                     <img src="/static/images/user.png" class="rounded mr-3">
                     <div class="media-body">
-                        <h4 class="lead">Ebene State Secondary School</h4>
-                        <div class="container rounded bg-light">
+                        <h4 class="lead" style="float:left">Ebene State Secondary School</h4>
+                        <h5 style="float: right" class="lead">2014 - 2015</h5>
+                        <div class="container rounded bg-light" style="clear: both">
                             <p>Cambridge O Level</p>
                             <ul>
                                 <li>Aggregate 13</li>
@@ -57,8 +61,9 @@
                 <div class="media border p-3">
                     <img src="/static/images/td.jpeg" height="48" width="48" class="rounded mr-3">
                     <div class="media-body">
-                        <h4 class="lead">TD Auto Finance</h4>
-                        <div class="container rounded bg-light">
+                        <h4 class="lead" style="float: left">TD Auto Finance</h4>
+                        <h5 style="float: right" class="lead">July 2019 - Present</h5>
+                        <div class="container rounded bg-light" style="clear: both">
                             <p>Customer Service Officer</p>
                             <ul>
                                 <li>Answer around 65 inbound queued up calls during a workday</li>
@@ -73,8 +78,9 @@
                 <div class="media border p-3">
                     <img src="/static/images/exo.jpeg" height="48" width="48" class="rounded mr-3">
                     <div class="media-body">
-                        <h4 class="lead">Exo</h4>
-                        <div class="container rounded bg-light">
+                        <h4 class="lead" style="float: left">Exo</h4>
+                        <h5 style="float: right" class="lead">Apr 2019 - July 2019</h5>
+                        <div class="container rounded bg-light" style="clear: both">
                             <p>Customer Service Agent</p>
                             <ul>
                                 <li>Coordinated train terminals</li>
@@ -89,8 +95,9 @@
                 <div class="media border p-3">
                     <img src="/static/images/wize.png" height="48" width="48" class="rounded mr-3">
                     <div class="media-body">
-                        <h4 class="lead">Wize</h4>
-                        <div class="container rounded bg-light">
+                        <h4 class="lead" style="float: left">Wize</h4>
+                        <h5 style="float: right" class="lead">Feb 2019 - May 2019</h5>
+                        <div class="container rounded bg-light" style="clear: both">
                             <p>Class Representative</p>
                             <ul>
                                 <li>Provided feedback to prep courses enrolled in</li>
@@ -106,8 +113,9 @@
                 <div class="media border p-3">
                     <img src="/static/images/YMCA.png" height="48" width="48" class="rounded mr-3">
                     <div class="media-body">
-                        <h4 class="lead">YMCA of Quebec</h4>
-                        <div class="container rounded bg-light">
+                        <h4 class="lead" style="float: left">YMCA of Quebec</h4>
+                        <h5 style="float: right" class="lead">Oct 2017 - Dec 2017</h5>
+                        <div class="container rounded bg-light" style="clear: both">
                             <p>Volunteer Tutor</p>
                             <ul>
                                 <li>Taught mathematics to 16-year-old youths twice a week</li>
