--- a/Chelsie's Website/templates/media.html
+++ b/Chelsie's Website/templates/media.html
@@ -2,7 +2,7 @@
 {% block title %} Media - CN {% endblock %}
 {% block content %}
     {# intagram api #}
-    <script type="text/javascript" src="{{ url_for('static', filename='mediaAPI.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='javascript/mediaAPI.js') }}"></script>
     <div class="container py-5 container-lg mx-auto d-block">
         <div class="display-3 text-center"><img class="img-responsive" src="/static/images/media.png"> Media</div>
         <ul class="nav nav-tabs nav-justified">
