home page improved

--- a/Chelsie's Website/templates/home.html
+++ b/Chelsie's Website/templates/home.html
@@ -102,7 +102,7 @@
         <p class="lead text-center"><i class="fas fa-birthday-cake"></i> Born on December 18th, 1999</p>
         <p class="lead text-center"><i class="fas fa-university"></i> Student at Concordia University</p>
         <p class="lead text-center text-decoration-none" style="outline-color: red"><i
-                class="fas fa-info-circle"></i> <a style="color: white" href="\learnmoreaboutme">Learn more about me</a>
+                class="fas fa-info-circle"></i> <a style="color: white; text-decoration: underline"  href="\learnmoreaboutme">Learn more about me</a>
         </p>
     </div>
 
