work experience updated

--- a/Chelsie's Website/templates/learnMoreAboutMe.html
+++ b/Chelsie's Website/templates/learnMoreAboutMe.html
@@ -59,16 +59,31 @@
             </div>
             <div class="tab-pane bg-white gitfade" id="work">
                 <div class="media border p-3">
+                    <img src="/static/images/matrox.jpeg" height="48" width="48" class="rounded mr-3">
+                    <div class="media-body">
+                        <h4 class="lead" style="float: left">Matrox</h4>
+                        <h5 style="float: right" class="lead">May 2020 - Present (Part-time)</h5>
+                        <div class="container rounded bg-light" style="clear: both">
+                            <p>Software Quality Assurance Intern</p>
+                            <ul>
+                                <li>Updated 20+ test cases on TestRail</li>
+                                <li>Debugged scripting code</li>
+                                <li>Prepared training presentation and mentored new SQA interns</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="media border p-3">
                     <img src="/static/images/td.jpeg" height="48" width="48" class="rounded mr-3">
                     <div class="media-body">
                         <h4 class="lead" style="float: left">TD Auto Finance</h4>
-                        <h5 style="float: right" class="lead">July 2019 - Present</h5>
+                        <h5 style="float: right" class="lead">July 2019 - May 2020</h5>
                         <div class="container rounded bg-light" style="clear: both">
                             <p>Customer Service Officer</p>
                             <ul>
-                                <li>Answer around 65 inbound queued up calls during a workday</li>
-                                <li>Administer active auto loans profile</li>
-                                <li>Action customer requests such as making payments, scheduling arrangements or sending
+                                <li>Answered around 65 inbound queued up calls during a workday</li>
+                                <li>Administered active auto loans profile</li>
+                                <li>Actioned customer requests such as making payments, scheduling arrangements or sending
                                     statement letters
                                 </li>
                             </ul>
